siotwt.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: siotwt 
  labels:
    app.kubernetes.io/name: siotwt 
spec:
  ports:
    - port: 8080 
      targetPort: 8080 
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: siotwt 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siotwt 
  labels:
    app.kubernetes.io/name: siotwt 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: siotwt 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: siotwt
    spec:
      containers:
        - name: siotwt 
          image: lelandsindt/siotwt:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080 
              protocol: TCP
