ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siotwt 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: siotwt-bender-sway-org-tls
      hosts:
        - siotwt.bender.sway.org 
  rules:
  - host: siotwt.bender.sway.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: siotwt 
            port:
              number: 8080
